2011-01-27  Ulrich Weigand  <Ulrich.Weigand@de.ibm.com>

	* config/spu/spu-elf.h (ASM_SPEC): Remove.

2011-01-26  Mikael Pettersson <mikpe@it.uu.se>

	PR rtl-optimization/46856
	* postreload.c (reload_combine_recognize_const_pattern): Do not
	separate cc0 setter and user on cc0 targets.

2011-01-26  Nicola Pero  <nicola.pero@meta-innovation.com>

	PR c/43082
	* c-typeck.c (c_objc_common_truthvalue_conversion): If we are
	passed a VOID_TYPE expression, immediately emit an error and
	return error_mark_node.

2011-01-26  Jeff Law  <law@redhat.com>

	PR rtl-optimization/47464
	* df-problems.c (can_move_insn_across): Use may_trap_or_fault_p
	rather than may_trap_p as needed.

2011-01-26  DJ Delorie  <dj@redhat.com>

	PR rtl-optimization/46878
	* combine.c (insn_a_feeds_b): Check for the implicit cc0
	setter/user dependency as well.

2011-01-26  Eric Botcazou  <ebotcazou@adacore.com>

	PR rtl-optimization/44469
	* cfgcleanup.c (try_optimize_cfg): Iterate in CFG layout mode too
	after removing trivially dead basic blocks.

2011-01-26  Joseph Myers  <joseph@codesourcery.com>

	* config/bfin/bfin.h (LINK_SPEC): Remove %{Qy:} %{!Qn:-Qy}.
	* config/frv/frv.h (LINK_SPEC): Likewise.
	* config/i386/netware.h (LINK_SPEC): Likewise.
	* config/m68k/linux.h (ASM_SPEC): Likewise.
	* config/rs6000/linux64.h (ASM_SPEC_COMMON): Likewise.
	* config/rs6000/sysv4.h (LINK_SPEC): Likewise.
	* config/rs6000/vxworks.h (ASM_SPEC): Likewise.
	* config/sparc/linux.h (ASM_SPEC): Likewise.
	* config/sparc/linux64.h (ASM_SPEC): Likewise.
	* config/sparc/sp-elf.h (ASM_SPEC): Likewise.

2011-01-26  Joseph Myers  <joseph@codesourcery.com>

	* config/bfin/bfin.h (ASM_SPEC): Remove %{Ym,*}.
	* config/frv/frv.h (ASM_SPEC): Likewise.
	* config/m68k/linux.h (ASM_SPEC): Likewise.
	* config/pa/pa-linux.h (ASM_SPEC): Likewise.
	* config/rs6000/linux64.h (ASM_SPEC): Likewise.
	* config/rs6000/vxworks.h (ASM_SPEC): Likewise.
	* config/sparc/linux.h (ASM_SPEC): Likewise.